# rusty_chips

./: Cargo.toml  INSTALL.md  LICENSE  README.md
src/: audio.rs  chip8.rs  counter.rs  fuse.rs  gui.rs  input.rs  main.rs  util.rs  vram.rs
src/ui/: menus.rs  mod.rs  sdl.rs  types.rs
