[package]

name = "rusty_chips"
version = "0.0.1"
authors = ["Justin Noah <justinnoah@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
log = { version = "0.4" }
rand = { version = "0.8" }
regex = { version = "1" }
sdl2 = { version = "0.35" }
simple_logger = { version = "4.0" }
tokio = { version = "1", features = ["full"] }
