[package]

name = "rusty_chips"
version = "0.1.0"
authors = ["Justin Noah <justinnoah@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
glow = { version = "0.10" }
home = { version = "0.5" }
imgui = { version = "0.10" , features = ["tables-api"] }
imgui-glow-renderer = { version = "0.10" }
imgui-sdl2-support = { version = "0.10" }
log = { version = "0.4" }
rand = { version = "0.8" }
regex = { version = "1" }
sdl2 = { version = "0.34.5" }
simple_logger = { version = "4.0" }
tokio = { version = "1", features = ["full"] }

[features]
default = ["sdl"]
sdl = []
